Correct art for dividers + new spacing to accommodate

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ a:hover, a:focus, a:active{
 	display: inline-grid;
 	grid-template-rows: repeat(5, 25%);
 	width: 100%;
-	height: auto;
+	height: 1.6rem;
 }
 
 /*Nav*/
@@ -172,22 +172,22 @@ a:hover, a:focus, a:active{
 }
 
 #anchor2{
-	margin-bottom: 25rem;
+	margin-bottom: 8.0rem;
 	grid-row: 2 / span 1;
 }
 
 #anchor3{
-	margin-bottom: 25rem;
+	margin-bottom: 8.0rem;
 	grid-row: 3 / span 1;
 }
 
 #anchor4{
-	margin-bottom: 25rem;
+	margin-bottom: 8.0rem;
 	grid-row: 4 / span 1;
 }
 
 #anchor5{
-	margin-bottom: 25rem;
+	margin-bottom: 8.0rem;
 	height: 2.6rem;
 	grid-row: 5 / span 1;
 }
@@ -210,7 +210,7 @@ a:hover, a:focus, a:active{
 
 /*Popup General*/
 #popupwrapper{
-	margin-bottom: 430px;
+	margin-bottom: 8.0rem;
 }
 
 .popup{
